# Pixelinator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  pixelinator.h  submodules.sh
clang-builds/: Makefile  makefile
engine/: global.h  time.c  types.h  util.h
engine/audio/: sound.c  sound.h
engine/config/: config.c
engine/core/: core.c  core.h
engine/draw/: bitmap.c  bitmap.h  pixel.c  pixel.h  pixel_threading.c  pixel_threading.h
engine/graphics/bitmap/: bitmap.c  bitmap.h  pixel_threading.h
engine/graphics/draw/: shapes.c  shapes.h
engine/input/: input.c  input.h
engine/io/: io.c  io.h
engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
include/: CMakeCache.txt  CMakeLists.txt  global.h  pixelinator.h  time.h  util.h
include/audio/: sound.h
include/config/: config.h
include/controller/: controller.h
include/core/: core.h
include/graphics/: bitmap.h  pixel_threading.h  shapes.h  sprite.h
include/input/: input.h
include/io/: io.h
include/render/: render.h
include/text/: SDL_FontCache.h  text.h
shaders/: default.frag  default.vert
src/engine/: global.c  time.c
src/engine/audio/: sound.c
src/engine/config/: config.c
src/engine/controller/: controller.c
src/engine/core/: core.c
src/engine/font_cache/: SDL_FontCache.c  SDL_FontCache.h
src/engine/graphics/bitmap/: bitmap.c  pixel_threading.c  pixel_threading.h
src/engine/graphics/draw/: shapes.c
src/engine/graphics/sprite/: sprite.c
src/engine/input/: input.c
src/engine/io/: io.c
src/engine/render/: render.c  render_init.c  render_internal.h  render_util.c
src/engine/text/: text.c
test/: CMakeCache.txt
test/sdl2/: SDL2.spec  SDL_config.h.intermediate  cmake_uninstall.cmake  sdl2-config  sdl2.pc
test/sdl2/include/SDL2/: SDL_revision.h
